--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swig",
   "version": "0.0.1",
   "description": "Electron app that fires off gulp utilities",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
