--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "ominestre",
   "license": "ISC",
   "dependencies": {
-    "electron": "^0.4.1",
-    "handlebars": "^4.0.5"
+    "electron": "^0.4.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
