Adds request dependency and adds connection test for sandbox login
Adds a connection test that will make a get request to the sandbox to retrieve the logs.  If it gets a valid response it will send an IPC communication to the renderer that login was successful.  Otherwise it will pass on a failure.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "ominestre",
   "license": "ISC",
   "dependencies": {
-    "electron": "^0.4.1"
+    "electron": "^0.4.1",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
