--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^0.4.1",
+    "lodash": "^4.13.1",
+    "parse5": "^2.1.5",
     "request": "^2.72.0"
   },
   "devDependencies": {
