--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Electron app that fires off gulp utilities",
   "main": "main.js",
   "scripts": {
-    "start": "set ELECTRON_ENABLE_LOGGING=true&&electron .",
-    "prod": "set NODE_ENV=production&&electron ."
+    "start": "set ELECTRON_ENABLE_LOGGING=true&&set NODE_ENV=dev&&electron .",
+    "prod": "electron ."
   },
   "author": "ominestre",
   "license": "ISC",
