--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "request": "^2.72.0"
   },
   "devDependencies": {
+    "electron-packager": "^7.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-notify": "^2.2.0",
